# Otter

./: .dockerignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  otter_driver.cc  pixi.toml  screened_poisson_gmg.cc  spack.yaml
.github/workflows/: docker.yml  pre-commit.yml  pull_request_tests.yml  tests  tests.yml
examples/spot-the-cow/: data_004.csv  input.json  input_cp.json
examples/spot-the-cow/mesh/: generateMesh.jou  mesh.inp  mesh.vtk  spot.stl
examples/spot-the-cow_tiffInput/: input_200.json  mesh_200.vtk
include/: multigrid.h  particle_util.h  read_tiff.h  screened_poisson_operator.h  utils.h
include/otter/: parameters.h  particle_util.h  read_tiff.h  source_data_rhs.h  utils.h
scripts/: run_docker.sh  sed-all-json  update_test_output.py
scripts/formatting/: format-all  format-all-code  format-all-json  format-all-py  format_json.py
tests/: CMakeLists.txt  grid_in_tet.cc  grid_in_tet.mpirun=4.output  input_1d.json  input_1d.output  input_abaqus.json  input_abaqus.mpirun=4.output  input_vtk_tet.json  input_vtk_tet.mpirun=4.output  input_vtk_tet_quad_point.json  input_vtk_tet_quad_point.mpirun=4.output  input_vtk_tet_quad_point_fast.json  input_vtk_tet_quad_point_fast.mpirun=4.output  parameters.cc  parameters.output  read_tiff.cc  read_tiff.output
tests/mesh/: allPoints_sampleFac100.xyz  downsampleFactor_8.tif  hex8_coarse.inp  mesh.msh  mesh.vtk  mesh_new.vtk  points_pixel.xyz  tet4_coarse.vtk
